# ai-sre-agent

./: .gitignore  LICENSE  README.md  app.py  cli.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ai_sre/: agent.py  config.py  tools.py
tests/: test_tools.py
