[project]
name = "ai-sre-agent"
version = "1.0.0"
description = "Autonomous AI SRE Diagnostics & Troubleshooting Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.35.0",
    "pandas>=2.2.0",
    "plotly>=5.22.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.1",
    "google-generativeai>=0.5.4",
    "openai>=1.30.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]